# MiniSync

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-sync.sh
src/: crdt.rs  index.rs  lib.rs  main.rs  peers.rs  protocol.rs  routing.rs  sync.rs  tls.rs  watcher.rs
src/catalog/: mod.rs  store.rs
src/config/: app.rs  mod.rs  rules.rs
src/engine/: handlers.rs  history.rs  mod.rs  scan.rs  session.rs  transfer.rs  watch.rs
src/gui/: file_browser.rs  mod.rs  peers_panel.rs  settings_panel.rs  state.rs
src/net/: discovery.rs  lattice.rs  mod.rs  peers.rs
src/protocol/: mod.rs
