[package]
name = "minisync"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["eframe", "rfd"]

[dependencies]
notify = "6"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
walkdir = "2"
anyhow = "1"
# CRDT 레인: 텍스트 동시 편집 자동 병합
automerge = "0.10"
# shadow↔새내용 diff → splice 연산 변환
similar = "2"
# UDP 자동 발견: SO_REUSEPORT(socket2) + 인터페이스별 broadcast 주소(if-addrs)
socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.13"
# TLS 암호화
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
rustls-pemfile = "2"
# Config + Reference mode
toml = "0.8"
glob = "0.3"
serde_json = "1"
hostname = "0.4"
# 경로 문자열 NFC 정규화 (macOS는 파일명을 NFD로 저장 → Win/Linux는 NFC 기대)
unicode-normalization = "0.1"
# GUI (optional)
eframe = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
